--- a/standardnavbar.html
+++ b/standardnavbar.html
@@ -22,28 +22,32 @@
 
             <div class="content_left">
                 <div>
-                    <div class="logo"><img src="./assets/img/Logo.png" alt=""></div>
+                    <div id="joinLogo" class="logo"><img src="./assets/img/Logo.png" alt=""></div>
                 </div>
 
                 <section class="navBar">
-                    <div class="nav_btn nav_summary"><img src="./assets/img/navBar/summary.svg" alt="">Summary</div>
+                    <div id="navSummary" class="nav_btn nav_summary"><img src="./assets/img/navBar/summary.svg"
+                            alt="">Summary</div>
 
 
-                    <div class="nav_btn nav_add_task"><img src="./assets/img/navBar/add_task.svg" alt="">Add Task</div>
+                    <div id="navAddTask" class="nav_btn nav_add_task"><img src="./assets/img/navBar/add_task.svg"
+                            alt="">Add Task</div>
 
 
-                    <div class="nav_btn nav_board"><img src="./assets/img/navBar/board.svg" alt="">Board</div>
+                    <div id="navBoard" class="nav_btn nav_board"><img src="./assets/img/navBar/board.svg" alt="">Board
+                    </div>
 
 
-                    <div class="nav_btn nav_contacts"><img src="./img/navBar/contacts.svg" alt="">Contacts</div>
+                    <div id="navContacts" class="nav_btn nav_contacts"><img src="./img/navBar/contacts.svg"
+                            alt="">Contacts</div>
 
 
                 </section>
 
                 <div class="navBar">
                     <div>
-                        <div class="nav_btn paddingleft">Privacy Policy</div>
-                        <div class="nav_btn paddingleft">legal notice</div>
+                        <div id="privacypolicy" class="nav_btn paddingleft">Privacy Policy</div>
+                        <div id="legalnotice" class="nav_btn paddingleft">legal notice</div>
                     </div>
                 </div>
 
@@ -52,9 +56,10 @@
             <div class="content_right">
                 <div class="header">
                     <p>Kanban Project Management Tool</p>
-                    <div class="header_btn_and_pic"><button class="question-mark"><img class="question-mark-img"
-                                src="./assets/img/navBar/help.svg" alt=""></button>
-                        <div><img class="profile_picture" src="./assets/img/dog-705820_640.jpg" alt="">
+                    <div class="header_btn_and_pic"><button class="question-mark"><img id="helpBtn"
+                                class="question-mark-img" src="./assets/img/navBar/help.svg" alt=""></button>
+                        <div><img id="profilePicture" class="profile_picture" src="./assets/img/dog-705820_640.jpg"
+                                alt="">
                         </div>
                     </div>
                 </div>
