--- a/add_task.html
+++ b/add_task.html
@@ -30,7 +30,7 @@
                             alt="">Summary</div>
 
 
-                    <div id="navAddTask" class="nav_btn nav_add_task"><img src="./assets/img/navBar/add_task.svg"
+                    <div id="navAddTask" class="nav_btn active nav_add_task"><img src="./assets/img/navBar/add_task.svg"
                             alt="">Add Task</div>
 
 
@@ -38,7 +38,7 @@
                     </div>
 
 
-                    <div id="navContacts" class="nav_btn nav_contacts"><img src="./img/navBar/contacts.svg"
+                    <div id="navContacts" class="nav_btn nav_contacts"><img src="./assets/img/navBar/contacts.svg"
                             alt="">Contacts</div>
 
 
@@ -62,6 +62,51 @@
                                 alt="">
                         </div>
                     </div>
+                </div>
+
+                <div class="addTask_header">
+                    <h1>Add Task</h1>
+                </div>
+
+                <div class="AddTask_wrapper">
+
+                    <div class="addTask_left">
+                        <div clas="task_title">
+                            <label for="">Title<p>*</p></label>
+                            <input type="text">
+                        </div>
+
+                        <div class="task_description">
+                            <label for="">Description</label>
+                            <input type="text">
+
+                        </div>
+
+                        <div class="task_assignedTo">
+                            <label for="">Assigned to</label>
+                            <input type="text">
+                        </div>
+
+
+
+                    </div>
+
+
+                    <div class="addTask_right">
+
+                        <div class="task_date">
+                            <label for=""></label>
+                            <input type="date">
+                        </div>
+
+
+                    </div>
+
+
+
+
+
+
                 </div>
 
 
