--- a/standardnavbar.html
+++ b/standardnavbar.html
@@ -38,7 +38,7 @@
                     </div>
 
 
-                    <div id="navContacts" class="nav_btn nav_contacts"><img src="./img/navBar/contacts.svg"
+                    <div id="navContacts" class="nav_btn nav_contacts"><img src="./assets/img/navBar/contacts.svg"
                             alt="">Contacts</div>
 
 
