--- a/standardnavbar.html
+++ b/standardnavbar.html
@@ -39,7 +39,7 @@
 
                     </section>
 
-                    <div class="navBar gap-16 margin-top-350">
+                    <div class="judicial-links gap-16 margin-top-350">
                         <a class="nav-link flex-center" href="">Privacy Policy</a>
                         <a class="nav-link flex-center" href="">legal notice</a>
 
