changed disabled button

--- a/add_task.html
+++ b/add_task.html
@@ -25,10 +25,10 @@
             </div>
 
             <section class="navBar">
-                <a href="./summary.html"><button class="nav_btn nav_summary " disabled="true"><span><img
+                <a href="./summary.html"><button class="nav_btn nav_summary "><span><img
                                 src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
 
-                <a href="./add_task.html"><button class="nav_btn nav_add_task active"><span><img
+                <a href="./add_task.html"><button class="nav_btn nav_add_task active" disabled><span><img
                                 src="./assets/img/navBar/add_task.svg" alt="">Add Task</span></button></a>
 
                 <a href="./board.html"><button class="nav_btn nav_board"><span><img src="./assets/img/navBar/board.svg"
