added board header

--- a/summary.html
+++ b/summary.html
@@ -30,7 +30,7 @@
 
             </section>
 
-            <div class="judicial-links gap-16 margin-top-350">             
+            <div class="judicial-links gap-16">             
                     <a class="nav-link flex-center" href="">Privacy Policy</a>
                     <a class="nav-link flex-center" href="">legal notice</a>
                
