added column-titles and add-btn to board

--- a/board.html
+++ b/board.html
@@ -72,7 +72,24 @@
                         <button id="addTask" class="add-task">Add Task <img src="./assets/img/add.png" alt=""></button>
                     </div>
                     </div>
-                    <div class="column-titles"></div>
+                    <div class="column-titles">
+                        <div class="to-do-title flex-title">
+                            <h3>To-Do</h3>
+                            <button class="add-to-do btn-title">+</button>
+                        </div>
+                        <div class="to-do-title flex-title">
+                            <h3>In progress</h3>
+                            <button class="add-in-progress btn-title">+</button>
+                        </div>
+                        <div class="to-do-title flex-title">
+                            <h3>Await feedback</h3>
+                            <button class="add-await-feedback btn-title">+</button>
+                        </div>
+                        <div class="to-do-title flex-title">
+                            <h3>Done</h3>
+                            <button class="add-done btn-title">+</button>
+                        </div>
+                    </div>
                 </div>
                 <!-- Hier kommt der Code hin! -->
 
