added board fields

--- a/board.html
+++ b/board.html
@@ -87,9 +87,15 @@
                         </div>
                         <div class="to-do-title flex-title">
                             <h3>Done</h3>
-                            <button class="add-done btn-title">+</button>
                         </div>
                     </div>
+                </div>
+
+                <div class="board-wrapper">
+                    <div draggable="true" id="toDoField" class="to-do-field board-field">hallo</div>
+                    <div draggable="true" id="inProgressField" class="in-progress-field board-field">hallo</div>
+                    <div draggable="true" id="awaitFeedbackField" class="await-feedback-field board-field">hallo</div>
+                    <div draggable="true" id="doneField" class="done-field board-field">hallo</div>
                 </div>
                 <!-- Hier kommt der Code hin! -->
 
