--- a/board.html
+++ b/board.html
@@ -92,10 +92,46 @@
                 </div>
 
                 <div class="board-wrapper">
-                    <div draggable="true" id="toDoField" class="to-do-field board-field">hallo</div>
-                    <div draggable="true" id="inProgressField" class="in-progress-field board-field">hallo</div>
-                    <div draggable="true" id="awaitFeedbackField" class="await-feedback-field board-field">hallo</div>
-                    <div draggable="true" id="doneField" class="done-field board-field">hallo</div>
+                    <div draggable="true" id="toDoField" class="to-do-field board-field">
+                        <div class="board-card">
+                            <div class="board-card-title">
+                                <h3>Card title</h3>
+                            </div>
+                            <div class="board-card-description">
+                                <p>Card description</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div draggable="true" id="inProgressField" class="in-progress-field board-field">
+                        <div class="board-card">
+                            <div class="board-card-title">
+                                <h3>Card title</h3>
+                            </div>
+                            <div class="board-card-description">
+                                <p>Card description</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div draggable="true" id="awaitFeedbackField" class="await-feedback-field board-field">
+                        <div class="board-card">
+                            <div class="board-card-title">
+                                <h3>Card title</h3>
+                            </div>
+                            <div class="board-card-description">
+                                <p>Card description</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div draggable="true" id="doneField" class="done-field board-field">
+                        <div class="board-card">
+                            <div class="board-card-title">
+                                <h3>Card title</h3>
+                            </div>
+                            <div class="board-card-description">
+                                <p>Card description</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <!-- Hier kommt der Code hin! -->
 
