--- a/board.html
+++ b/board.html
@@ -33,8 +33,8 @@
                 <a href="./add_task.html"><button class="nav_btn nav_add_task"><span><img
                                 src="./assets/img/navBar/add_task.svg" alt="">Add Task</span></button></a>
 
-                <a href="./board.html"><button class="nav_btn nav_board active" disabled><span><img src="./assets/img/navBar/board.svg"
-                                alt="">Board</span></button></a>
+                <a href="./board.html"><button class="nav_btn nav_board active" disabled><span><img
+                                src="./assets/img/navBar/board.svg" alt="">Board</span></button></a>
 
                 <a href="./contacts.html"><button class="nav_btn nav_contacts"><span><img
                                 src="./assets/img/navBar/contacts.svg" alt="">Contacts</span></button></a>
@@ -66,46 +66,59 @@
                     <div class="board-header-title">
                         <h2>Board</h2>
                         <div class="search-and-add-task">
-                        <form onsubmit="return false;" class="find-task" id="findTask">
-                            <input class="find-task-input" id="findTaskInput" type="text" placeholder="Find Task">
-                            <button class="search-btn"><img src="./assets/img/search.png" alt=""></button>
-                        </form>
-                        <button id="addTask" class="add-task">Add Task <img src="./assets/img/add.png" alt=""></button>
+                            <form onsubmit="return false;" class="find-task" id="findTask">
+                                <input class="find-task-input" id="findTaskInput" type="text" placeholder="Find Task">
+                                <button class="search-btn"><img src="./assets/img/search.png" alt=""></button>
+                            </form>
+                            <button id="addTask" class="add-task">Add Task <img src="./assets/img/add.png"
+                                    alt=""></button>
+                        </div>
                     </div>
-                    </div>
-                    <div class="column-titles">
+
+
+                    <!-- 
+                        
+                        -->
+
+                </div>
+
+                <div class="board-wrapper">
+                    <div class="board-title-field-wrapper">
                         <div class="to-do-title flex-title">
                             <h3>To-Do</h3>
                             <button class="add-to-do btn-title">+</button>
                         </div>
+                        <div draggable="true" id="toDoField" class="to-do-field board-field">
+                            <div class="board-card">
+                                <div class="board-card-title">
+                                    <h3>Card title</h3>
+                                </div>
+                                <div class="board-card-description">
+                                    <p>Card description</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="board-title-field-wrapper">
                         <div class="to-do-title flex-title">
                             <h3>In progress</h3>
                             <button class="add-in-progress btn-title">+</button>
                         </div>
+                        <div draggable="true" id="inProgressField" class="in-progress-field board-field"></div>
+                    </div>
+                    <div class="board-title-field-wrapper">
                         <div class="to-do-title flex-title">
                             <h3>Await feedback</h3>
                             <button class="add-await-feedback btn-title">+</button>
                         </div>
+                        <div draggable="true" id="awaitFeedbackField" class="await-feedback-field board-field"></div>
+                    </div>
+                    <div class="board-title-field-wrapper">
                         <div class="to-do-title flex-title">
                             <h3>Done</h3>
                         </div>
+                        <div draggable="true" id="doneField" class="done-field board-field"></div>
                     </div>
-                </div>
-
-                <div class="board-wrapper">
-                    <div draggable="true" id="toDoField" class="to-do-field board-field">
-                        <div class="board-card">
-                            <div class="board-card-title">
-                                <h3>Card title</h3>
-                            </div>
-                            <div class="board-card-description">
-                                <p>Card description</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div draggable="true" id="inProgressField" class="in-progress-field board-field"></div>
-                    <div draggable="true" id="awaitFeedbackField" class="await-feedback-field board-field"></div>
-                    <div draggable="true" id="doneField" class="done-field board-field"></div>
                 </div>
                 <!-- Hier kommt der Code hin! -->
 
