addTasks.html.js.css changes

--- a/add_task.html
+++ b/add_task.html
@@ -115,7 +115,9 @@
                         </div>
 
                         <div class="addTask-section addTask-prio">
-                            <label for="">Prio</label>
+                            <label for="">
+                                <p>Prio</p>
+                            </label>
                             <div class="prio-buttons">
                                 <button onclick="changeUrgentBtn()" id="urgent-btn"
                                     class="urgent prio-btn-urgent">Urgent <img id="urgent-img" src="" alt=""></button>
@@ -128,36 +130,42 @@
                         </div>
 
                         <div class="addTask-section addTask-category">
-                            <label for="">Category</label>
+                            <label for="">
+                                <p>Category</p>
+                            </label>
                             <input type="text">
                         </div>
 
                         <div class="addTask-subtasks">
-                            <label for="">Subtasks</label>
+                            <label for="">
+                                <p>Subtasks</p>
+                            </label>
                             <div class="subtasks-btn"><input type="text"><button>+</button></div>
                         </div>
-
-
-
                     </div>
 
 
-
-
-
                 </div>
-
-                <div class=" addTask-footer">
+                <div class="addTask-footer">
                     <div><span style="color:red">*</span><span>This field is required</span></div>
-                    <div class="display-flex"><button>Clear</button><button class="createTask-button">Create Task<img
-                                src="" alt="">
+                    <div class="display-flex clear-create"><button class="clear-btn">Clear <img
+                                src="./assets/svg/addTasksSvg/clear.svg" alt=""></button><button
+                            class="createTask-button">Create Task<img src="./assets/svg/addTasksSvg/cross.svg" alt="">
                         </button></div>
 
                 </div>
 
 
 
+
+
+
+
+
+
+
             </div>
+
 
 
         </div>
