--- a/summary.html
+++ b/summary.html
@@ -20,34 +20,38 @@
             </div>
 
             <section class="navBar">
-                <a href="./summary.html"><button class="nav_btn nav_summary active" disabled="true"><span><img src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
+                <a href="./summary.html"><button class="nav_btn nav_summary active" disabled="true"><span><img
+                                src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
 
-                <a href="./add_task.html"><button class="nav_btn nav_add_task" ><span><img src="./assets/img/navBar/add_task.svg" alt="">Add Task</span></button></a>
+                <a href="./add_task.html"><button class="nav_btn nav_add_task"><span><img
+                                src="./assets/img/navBar/add_task.svg" alt="">Add Task</span></button></a>
 
-                <a href="./board.html"><button class="nav_btn nav_board" ><span><img src="./assets/img/navBar/board.svg" alt="">Board</span></button></a>
+                <a href="./board.html"><button class="nav_btn nav_board"><span><img src="./assets/img/navBar/board.svg"
+                                alt="">Board</span></button></a>
 
-                <a href="./contacts.html"><button class="nav_btn nav_contacts" ><span><img src="./assets/img/navBar/contacts.svg" alt="">Contacts</span></button></a>
+                <a href="./contacts.html"><button class="nav_btn nav_contacts"><span><img
+                                src="./assets/img/navBar/contacts.svg" alt="">Contacts</span></button></a>
 
             </section>
 
-            <div class="judicial-links gap-16">             
-                    <a class="nav-link flex-center" href="">Privacy Policy</a>
-                    <a class="nav-link flex-center" href="">legal notice</a>
-               
+            <div class="judicial-links gap-16">
+                <a class="nav-link flex-center" href="">Privacy Policy</a>
+                <a class="nav-link flex-center" href="">legal notice</a>
+
             </div>
 
         </div>
 
         <div class="content-wrapper">
 
-                <div class="header">
-                    <p>Kanban Project Management Tool</p>
-                    <div class="header_btn_and_pic"><button class="question-mark"><img class="question-mark-img" src=""
-                                alt=""></button>
-                        <div><img class="profile_picture" src="" alt="">
-                        </div>
+            <div class="header">
+                <p>Kanban Project Management Tool</p>
+                <div class="header_btn_and_pic"><button class="question-mark"><img class="question-mark-img"
+                            src="./assets/img/navBar/help.svg" alt=""></button>
+                    <div><img class="profile_picture" src="" alt="">
                     </div>
                 </div>
+            </div>
             <div class="summary-wrapper">
                 <div class="headline">
                     <h1 class="font-size-61px">Join 360</h1>
@@ -126,9 +130,9 @@
                         <h2 class="user-name" id="userName">Sofia Müller</h2>
                     </div>
                 </div>
-            
+
+            </div>
         </div>
-    </div>
 </body>
 
 </html>
