--- a/add_task.html
+++ b/add_task.html
@@ -159,7 +159,7 @@
                             <label for="">
                                 <p>Subtasks</p>
                             </label>
-                            <div class="subtasks-btn"><input type="text"><button>+</button></div>
+                            <div class="addTask-section"><input type="text"></div>
                         </div>
                     </div>
 
