--- a/add_task.html
+++ b/add_task.html
@@ -58,7 +58,7 @@
                 <p>Kanban Project Management Tool</p>
                 <div class="header_btn_and_pic"><button class="question-mark"><img class="question-mark-img"
                             src="./assets/img/navBar/help.svg" alt=""></button>
-                    <div><img class="profile_picture" src="" alt="">
+                    <div><img class="profile_picture" src="./assets/img/dog-705820_640.jpg" alt="">
                     </div>
                 </div>
             </div>
