render tasks in summary.js

--- a/summary.html
+++ b/summary.html
@@ -10,9 +10,11 @@
     <link rel="stylesheet" href="./styles/summary.css">
     <link rel="stylesheet" href="./styles/navBar.css">
     <title>Join</title>
+    <script src="./scripts/script.js" defer></script>
+    <script src="./scripts/summary.js" defer></script>
 </head>
 
-<body>
+<body onload="init()">
     <div class="content-width">
         <div class="content_left">
             <div>
@@ -77,7 +79,7 @@
                                     </g>
                                 </svg>
                                 <span class="font-size-20px">
-                                    <h2 id="ToDo">1</h2>To-do
+                                    <h2 id="toDo"></h2>To-do
                                 </span>
                             </button>
 
@@ -89,7 +91,7 @@
                                         stroke-width="7" stroke-linecap="round" stroke-linejoin="round" />
                                 </svg>
                                 <span class="font-size-20px">
-                                    <h2 id="done">1</h2> Done
+                                    <h2 id="done"></h2> Done
                                 </span>
                             </button>
                         </div>
@@ -112,15 +114,15 @@
 
                         <div class="board-overview">
                             <button>
-                                <h2 id="tasksInBoard">5</h2>
+                                <h2 id="tasksInBoard"></h2>
                                 <span class="font-size-20px">Tasks<br> in Board</span>
                             </button>
                             <button>
-                                <h2 id="tasksInProgress">5</h2>
+                                <h2 id="tasksInProgress"></h2>
                                 <span class="font-size-20px">Tasks<br> in Progress</span>
                             </button>
                             <button>
-                                <h2 id="awaitingFeedback">5</h2>
+                                <h2 id="awaitingFeedback"></h2>
                                 <span class="font-size-20px">Awaiting<br> Feedback</span>
                             </button>
                         </div>
