--- a/board.html
+++ b/board.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./scripts/board.js"></script>
     <script src="./scripts/boardTemplate.js"></script>
+    <script src="./scripts/script.js"></script>
     <title>Join</title>
     <link rel="stylesheet" href="./styles/navBar.css">
     <link rel="stylesheet" href="./styles/standard.css">
