started hilfe.html

--- a/standardnavbar.html
+++ b/standardnavbar.html
@@ -18,7 +18,6 @@
 <body>
 
     <div class="content-width">
-
         <div class="content_left">
             <div>
                 <div class="logo"><img src="./assets/img/Logo.png" alt=""></div>
@@ -47,14 +46,13 @@
 
         </div>
 
-
-
         <div class="content-wrapper">
 
             <div class="header">
                 <p>Kanban Project Management Tool</p>
-                <div class="header_btn_and_pic"><button class="question-mark"><img class="question-mark-img"
-                            src="./assets/img/navBar/help.svg" alt=""></button>
+                <div class="header_btn_and_pic">
+                    <a class="question-mark" href="./hilfe.html"><img class="question-mark-img"
+                        src="./assets/img/navBar/help.png" alt=""></a>
                     <div><img class="profile_picture" src="" alt="">
                     </div>
                 </div>
