--- a/summary.html
+++ b/summary.html
@@ -48,8 +48,10 @@
 
             <div class="header">
                 <p>Kanban Project Management Tool</p>
-                <div class="header_btn_and_pic"><button class="question-mark"><img class="question-mark-img"
-                            src="./assets/img/navBar/help.svg" alt=""></button>
+                <div class="header_btn_and_pic">
+                    <a class="question-mark" href="./hilfe.html"><img class="question-mark-img"
+                        src="./assets/img/navBar/help.png" alt=""></a>
+                   
                     <div><img class="profile_picture" src="" alt="">
                     </div>
                 </div>
