--- a/hilfe.html
+++ b/hilfe.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/navBar.css">
     <link rel="stylesheet" href="./styles/standard.css">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/hilfe.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -25,7 +26,7 @@
             </div>
 
             <section class="navBar">
-                <a href="./summary.html"><button class="nav_btn nav_summary active" disabled="true"><span><img
+                <a href="./summary.html"><button class="nav_btn nav_summary" ><span><img
                                 src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
 
                 <a href="./add_task.html"><button class="nav_btn nav_add_task"><span><img
@@ -59,6 +60,30 @@
                 </div>
             </div>
             <div class="content-right">
+                <div class="help-header">
+                    <h1>Help</h1>
+                    <a class="back-arrow" href="javascript:history.back()">
+                        <img src="./assets/img/back_arrow_blue.png" alt="">
+                    </a>
+                </div>
+
+                <div class="help-content">
+                    <p>Welcome to the help page og Join, your guide to using our kanban project management tool.
+                        Here, we´ll provide an overview of what Join is, how it can benefit you, and how to use it.
+                    </p>
+                    <br>
+                    <h3>What is Join?</h3>
+                    <br>
+                    <p>Join is a kanban-based project management tool designed and build by a group of dedicated students as part of their web 
+                        develpment bootcamp at the Developer Akademie.
+                    </p>
+                    <br>
+                    <p>Kanban, a japanese term meaning "bilboard" is a higly effective method to visualize work, limit work in-progress, and maximize
+                        efficiency (or flow). Join leverages the pronciples of kanban to help users manage their tasks and projects in an intuitive, visual interface.
+                    </p>
+                    <br>
+                    <p>It is important to note that Join is designed as an educational exercise and is not intended for extensive</p>
+                </div>
                 <!-- Hier kommt der Code hin! -->
 
             </div>
