added an alpha version of the edit contact overlay

--- a/contacts.html
+++ b/contacts.html
@@ -257,10 +257,13 @@
 
 
                 </div>
+
+
+
             </div>
         </div>
 
-
+        <section class="add-contact-overlay"></section>
 
 
 
